--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.1.1",
     "ejs": "~2.3.1",
     "express": "~4.12.2",
+    "mongoose": "^3.8.25",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
   },
