--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "prestart": "mongod --dbpath data &",
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
     "config": "^1.12.0",
+    "connect-mongo": "^0.8.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "ejs": "~2.3.1",
     "express": "~4.12.2",
+    "express-session": "^1.10.4",
     "mongoose": "^3.8.25",
     "morgan": "~1.5.1",
+    "passport": "^0.2.1",
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
