--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "app-root-path": "^1.0.0",
     "body-parser": "~1.12.0",
     "config": "^1.12.0",
     "connect-mongo": "^0.8.0",
@@ -17,14 +18,20 @@
     "express-session": "^1.10.4",
     "mongoose": "^3.8.25",
     "morgan": "~1.5.1",
+    "node-uuid": "^1.4.3",
     "passport": "^0.2.1",
-    "serve-favicon": "~2.2.0"
+    "passport-local": "^1.0.0",
+    "serve-favicon": "~2.2.0",
+    "validator": "^3.35.0"
   },
   "devDependencies": {
+    "expect.js": "^0.3.1",
     "grunt": "^0.4.5",
     "grunt-bowercopy": "^1.2.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.12.2",
-    "grunt-contrib-uglify": "^0.8.0"
+    "grunt-contrib-uglify": "^0.8.0",
+    "mocha": "^2.2.1",
+    "superagent": "^1.1.0"
   }
 }
