--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "validator": "^3.35.0"
   },
   "devDependencies": {
-    "expect.js": "^0.3.1",
     "grunt": "^0.4.5",
     "grunt-bowercopy": "^1.2.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-uglify": "^0.8.0",
     "mocha": "^2.2.1",
-    "superagent": "^1.1.0"
+    "superagent": "^1.1.0",
+    "expect.js": "^0.3.1"
   }
 }
