--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "~2.3.1",
     "express": "~4.12.2",
     "express-session": "^1.10.4",
+    "flash": "^1.1.0",
     "mongoose": "^3.8.25",
     "morgan": "~1.5.1",
     "node-uuid": "^1.4.3",
