--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,9 @@
   ],
   "dependencies": {
     "angular": "~1.3.15",
-    "d3": "~3.5.5"
+    "d3": "~3.5.5",
+    "angular-route": "~1.3.15",
+    "angular-resource": "~1.3.15",
+    "angular-cookies": "~1.3.15"
   }
 }
