--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "prestart": "mongod --dbpath data &",
-    "start": "nodemon ./bin/www"
+    "start": "grunt watch | nodemon ./bin/www"
   },
   "dependencies": {
     "app-root-path": "^1.0.0",
@@ -26,13 +26,14 @@
     "validator": "^3.35.0"
   },
   "devDependencies": {
+    "expect.js": "^0.3.1",
     "grunt": "^0.4.5",
     "grunt-bowercopy": "^1.2.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-uglify": "^0.8.0",
+    "grunt-contrib-watch": "^0.6.1",
     "mocha": "^2.2.1",
-    "superagent": "^1.1.0",
-    "expect.js": "^0.3.1"
+    "superagent": "^1.1.0"
   }
 }
