--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,6 @@
     "d3": "~3.5.5",
     "angular-route": "~1.3.15",
     "angular-resource": "~1.3.15",
-    "angular-cookies": "~1.3.15",
-    "bootstrap3-dialog": "~1.34.3"
+    "angular-cookies": "~1.3.15"
   }
 }
