--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "prestart": "gulp && mongod --dbpath data &",
+    "prestart": "gulp &",
     "start": "grunt watch | DEBUG=cm:* nodemon ./bin/www"
   },
   "dependencies": {
