--- a/bower.json
+++ b/bower.json
@@ -26,5 +26,9 @@
     "angular-route": "~1.3.15",
     "angular-resource": "~1.3.15",
     "angular-cookies": "~1.3.15"
+  },
+  "devDependencies": { 
+    "jquery-ui-touch-punch": "*",
+    "lodash": "~3.7.0"
   }
 }
