--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.12.2",
     "express-session": "^1.10.4",
     "flash": "^1.1.0",
+    "gulp": "^3.9.0",
     "moment": "^2.10.2",
     "mongoose": "^4.0.1",
     "morgan": "~1.5.1",
