--- a/bower.json
+++ b/bower.json
@@ -25,8 +25,7 @@
     "d3": "~3.5.5",
     "angular-route": "~1.3.15",
     "angular-resource": "~1.3.15",
-    "angular-cookies": "~1.3.15",
-    "Chart.js": "~1.0.2"
+    "angular-cookies": "~1.3.15"
   },
   "devDependencies": {
     "jquery-ui-touch-punch": "*",
