--- a/modules/applications/my-course/config.json
+++ b/modules/applications/my-course/config.json
@@ -1,46 +1,41 @@
 {
   "name": "My Courses",
-  "description": "",
-  "isActive": "true",
+  "description": "oyeahh",
   "widgets":[
     {
-      "widgetName": "My Courses List",
+      "name": "My Courses List",
       "location": "user-profile",
       "description": "Will list all your following courses",
       "entryPoint": "/my-course/my-following-courses",
       "width": 2,
       "height":4,
-      "isActive": "true",
       "icon":"/img/appPlaceholder.png"
     },
     {
-      "widgetName": "My Progress",
+      "name": "My Progress",
       "location": "course",
       "description": "show your overal progress on this particular course",
       "entryPoint": "/my-course/journey",
       "width": 2,
       "height":2,
-      "isActive": "true",
       "icon":"/img/appPlaceholder.png"
     },
     {
-      "widgetName": "My Summary",
+      "name": "My Summary",
       "location": "user-profile",
       "description": "Radar Graph to show summary of your learning process",
       "entryPoint": "/my-course/my-summary",
       "width": 2,
       "height":2,
-      "isActive": "true",
       "icon":"/img/appPlaceholder.png"
     },
     {
-      "widgetName": "My CourseProgress",
+      "name": "My CourseProgress",
       "location": "user-profile",
       "description": "Line Graph to show history progress of one particular course",
       "entryPoint": "/my-course/my-course-progress",
       "width": 2,
       "height":2,
-      "isActive": "true",
       "icon":"/img/appPlaceholder.png"
     }
 
