--- a/modules/applications/my-course/config.json
+++ b/modules/applications/my-course/config.json
@@ -12,7 +12,7 @@
     },
     {
       "name": "My Progress",
-      "location": "course",
+      "location": "course-preview",
       "description": "show your overal progress on this particular course",
       "entryPoint": "/my-course/journey",
       "width": 2,
@@ -33,6 +33,15 @@
       "location": "user-profile",
       "description": "Line Graph to show history progress of one particular course",
       "entryPoint": "/my-course/my-course-progress",
+      "width": 2,
+      "height":2,
+      "icon":"/img/appPlaceholder.png"
+    },
+    {
+      "name": "Contributor",
+      "location": "course-preview",
+      "description": "show contributor of this course",
+      "entryPoint": "/my-course/journey",
       "width": 2,
       "height":2,
       "icon":"/img/appPlaceholder.png"
