category front end can get widgets with "runOn" "server"

--- a/modules/applications/course-analytics/config.json
+++ b/modules/applications/course-analytics/config.json
@@ -36,6 +36,14 @@
       "width": 12,
       "height":1,
       "icon":"/img/appPlaceholder.png"
+    },
+    {
+      "name": "Category analytics",
+      "location": "category-homepage",
+      "description": "category stats that say about this cat",
+      "entryPoint": "/course-analytics/category-stats.js",
+      "icon":"/img/appPlaceholder.png",
+      "runOn": "server"
     }
   ]
 }
