--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "app-root-path": "^1.0.0",
+    "async-foreach": "^0.1.3",
     "asyncawait": "^0.7.4",
     "body-parser": "~1.12.0",
     "config": "^1.12.0",
