--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "x-frame-options": "^1.0.0",
     "lodash": "^3.10.0",
     "socket.io": "^1.3.5",
-    "bower": "^1.4.1"
+    "bower": "^1.4.1",
+    "grunt": "^0.4.5"
   },
   "devDependencies": {
     "connect-livereload": "^0.5.3",
     "expect.js": "^0.3.1",
-    "grunt": "^0.4.5",
     "grunt-bowercopy": "^1.2.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.9.2",
