--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "prestart": "gulp &",
-    "postinstall": "grunt production",
+    "prestart": "gulp &", 
     "start": "grunt watch | DEBUG=cm:* nodemon ./bin/www"
   },
   "dependencies": {
@@ -37,13 +36,7 @@
     "x-frame-options": "^1.0.0",
     "lodash": "^3.10.0",
     "socket.io": "^1.3.5",
-    "bower": "^1.4.1",
-    "grunt": "^0.4.5",
-    "grunt-bowercopy": "^1.2.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-uglify": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-ng-annotate": "^1.0.1"
+    "bower": "^1.4.1"
   },
   "devDependencies": {
     "connect-livereload": "^0.5.3",
