--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "prestart": "gulp &", 
+    "prestart": "gulp &",
     "start": "grunt watch | DEBUG=cm:* nodemon ./bin/www"
   },
   "dependencies": {
@@ -11,6 +11,7 @@
     "async-foreach": "^0.1.3",
     "asyncawait": "^0.7.4",
     "body-parser": "~1.12.0",
+    "bower": "^1.4.1",
     "config": "^1.12.0",
     "connect-mongo": "^0.8.0",
     "connect-multiparty": "^1.2.5",
@@ -22,21 +23,21 @@
     "flash": "^1.1.0",
     "fs-extra": "^0.20.1",
     "gulp": "^3.9.0",
+    "lodash": "^3.10.0",
     "moment": "^2.10.2",
     "mongoose": "^4.0.7",
     "morgan": "~1.5.1",
     "node-uuid": "^1.4.3",
     "passport": "^0.2.1",
+    "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.2.0",
     "shortid": "^2.2.2",
     "slug": "^0.8.0",
+    "socket.io": "^1.3.5",
     "underscore": "^1.8.3",
     "validator": "^3.35.0",
-    "x-frame-options": "^1.0.0",
-    "lodash": "^3.10.0",
-    "socket.io": "^1.3.5",
-    "bower": "^1.4.1"
+    "x-frame-options": "^1.0.0"
   },
   "devDependencies": {
     "connect-livereload": "^0.5.3",
