--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "videogular-themes-default": "1.1.0",
     "videogular-controls": "1.1.0",
     "videogular-angulartics": "1.1.0",
-    "videogular-youtube": "master"
+    "videogular-youtube": "master",
+    "angular-quill": "~0.9.1"
   },
   "devDependencies": {},
   "resolutions": {
