add quill and angular-quill, and add new reply is using quill

--- a/bower.json
+++ b/bower.json
@@ -22,21 +22,22 @@
   ],
   "dependencies": {
     "angular": "~1.3.18",
+    "angular-cookies": "~1.3.18",
+    "angular-quill": "~0.9.1",
+    "angular-resource": "~1.3.18",
     "angular-route": "~1.3.18",
     "angular-sanitize": "~1.3.4",
-    "angular-resource": "~1.3.18",
-    "angular-cookies": "~1.3.18",
-    "lodash": "~3.10.0",
     "bootstrap": "~3.3.5",
     "jquery": "~2.1.4",
     "jquery-ui": "~1.11.4",
     "jquery-ui-touch-punch": "*",
+    "lodash": "~3.10.0",
+    "quill": "~0.20.0",
     "videogular": "1.1.0",
-    "videogular-themes-default": "1.1.0",
-    "videogular-controls": "1.1.0",
     "videogular-angulartics": "1.1.0",
-    "videogular-youtube": "master",
-    "angular-quill": "~0.9.1"
+    "videogular-controls": "1.1.0",
+    "videogular-themes-default": "1.1.0",
+    "videogular-youtube": "master"
   },
   "devDependencies": {},
   "resolutions": {
