--- a/package.json
+++ b/package.json
@@ -9,34 +9,35 @@
   "dependencies": {
     "app-root-path": "^1.0.0",
     "async-foreach": "^0.1.3",
-    "asyncawait": "^0.7.4",
-    "body-parser": "~1.12.0",
+    "asyncawait": "^1.0.0",
+    "body-parser": "~1.13.3",
     "bower": "^1.4.1",
     "config": "^1.12.0",
     "connect-mongo": "^0.8.0",
-    "connect-multiparty": "^1.2.5",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "~1.3.4",
-    "debug": "~2.1.1",
+    "debug": "~2.2.0",
     "ejs": "~2.3.1",
-    "express": "~4.12.2",
+    "express": "~4.13.3",
     "express-session": "^1.10.4",
     "flash": "^1.1.0",
-    "fs-extra": "^0.20.1",
+    "fs-extra": "^0.24.0",
     "gulp": "^3.9.0",
     "lodash": "^3.10.0",
     "moment": "^2.10.2",
     "mongoose": "^4.0.7",
-    "morgan": "~1.5.1",
+    "morgan": "~1.6.1",
     "node-uuid": "^1.4.3",
-    "passport": "^0.2.1",
+    "passport": "^0.3.0",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.2.0",
+    "passport.socketio": "^3.6.1",
+    "serve-favicon": "~2.3.0",
     "shortid": "^2.2.2",
-    "slug": "^0.8.0",
+    "slug": "^0.9.1",
     "socket.io": "^1.3.5",
     "underscore": "^1.8.3",
-    "validator": "^3.35.0",
+    "validator": "^4.0.5",
     "x-frame-options": "^1.0.0"
   },
   "devDependencies": {
