--- a/modules/applications/course-analytics/config.json
+++ b/modules/applications/course-analytics/config.json
@@ -39,8 +39,8 @@
       "name": "Top Contributors",
       "location": "course-preview",
       "description": "List of top contributor for current course",
-      "entryPoint": "/course-analytics/ca-top-contributors",
-      "widgetJavascript": "ca-top-contributors.js",
+      "entryPoint": "/course-analytics/ca-preview-top-contributors",
+      "widgetJavascript": "ca-preview-top-contributors.js",
       "width": 12,
       "height":1,
       "icon":"/img/appPlaceholder.png"
@@ -49,7 +49,8 @@
       "name": "Course Statistics",
       "location": "course-preview",
       "description": "Course Statistics data for current course",
-      "entryPoint": "/course-analytics/course-statistics",
+      "entryPoint": "/course-analytics/ca-preview-statistics",
+      "widgetJavascript": "ca-preview-statistics.js",
       "width": 12,
       "height":1,
       "icon":"/img/appPlaceholder.png"
