--- a/modules/applications/my-course/config.json
+++ b/modules/applications/my-course/config.json
@@ -6,6 +6,7 @@
       "location": "user-profile",
       "description": "Will list all your following courses",
       "entryPoint": "/my-course/my-following-courses",
+      "widgetJavascript": "my-following-courses.js",
       "width": 4,
       "height":1,
       "icon":"/img/appPlaceholder.png"
