--- a/modules/applications/course-analytics/config.json
+++ b/modules/applications/course-analytics/config.json
@@ -66,7 +66,7 @@
     {
       "name": "node topic",
       "location": "node-icon-analytics",
-      "description": "bbb bbb",
+      "description": "analytic icons in node topic",
       "entryPoint": "/course-analytics/icon-analytics.js",
       "icon":"/img/appPlaceholder.png",
       "runOn": "server"
