--- a/modules/applications/my-course/config.json
+++ b/modules/applications/my-course/config.json
@@ -24,7 +24,7 @@
     {
       "name": "My Course History Progress",
       "location": "user-profile",
-      "description": "Line graph to show history progress of my following course",
+      "description": "Bar graph to show history progress of my following course",
       "entryPoint": "/my-course/my-course-progress",
       "widgetJavascript": "my-course-history-progress.js",
       "width": 7,
