--- a/bower.json
+++ b/bower.json
@@ -42,6 +42,6 @@
   "devDependencies": {},
   "resolutions": {
     "angular": "1.3.18",
-    "videogular": "1.2.6"
+    "videogular": "^1.2.8"
   }
 }
