--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "angular": "~1.3.18",
+    "angular-bootstrap": "~0.13.4",
     "angular-cookies": "~1.3.18",
     "angular-quill": "~0.9.1",
     "angular-resource": "~1.3.18",
@@ -37,11 +38,14 @@
     "videogular-angulartics": "1.1.0",
     "videogular-controls": "1.1.0",
     "videogular-themes-default": "1.1.0",
-    "videogular-youtube": "master"
+    "videogular-youtube": "master",
+    "bootstrap-timepicker": "~0.5.1"
   },
   "devDependencies": {},
   "resolutions": {
     "angular": "1.3.18",
-    "videogular": "^1.2.8"
+    "videogular": "^1.2.8",
+    "bootstrap": "~3.3.5",
+    "jquery": ">= 1.9.0"
   }
 }
