--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "angular-route": "~1.3.18",
     "angular-sanitize": "~1.3.4",
     "bootstrap": "~3.3.5",
+    "bootstrap-timepicker": "~0.5.1",
     "jquery": "~2.1.4",
     "jquery-ui": "~1.11.4",
     "jquery-ui-touch-punch": "*",
@@ -39,7 +40,8 @@
     "videogular-controls": "1.1.0",
     "videogular-themes-default": "1.1.0",
     "videogular-youtube": "master",
-    "bootstrap-timepicker": "~0.5.1"
+    "angular-toastr": "~1.5.0",
+    "angular-animate": "~1.4.7"
   },
   "devDependencies": {},
   "resolutions": {
