--- a/modules/applications/course-analytics/config.json
+++ b/modules/applications/course-analytics/config.json
@@ -34,6 +34,16 @@
       "width": 12,
       "height":1,
       "icon":"/img/appPlaceholder.png"
+    },
+    {
+      "name": "Enrolled User List",
+      "location": "course-analytics",
+      "description": "List of users that enrolled to the course",
+      "entryPoint": "/course-analytics/ca-enrolled-users",
+      "widgetJavascript": ["ca-enrolled-users.js"],
+      "width": 4,
+      "height":1,
+      "icon":"/img/appPlaceholder.png"
     }
   ]
 }
