--- a/bower.json
+++ b/bower.json
@@ -34,10 +34,10 @@
     "jquery-ui-touch-punch": "*",
     "lodash": "~3.10.0",
     "quill": "~0.20.0",
-    "videogular": "1.1.0",
-    "videogular-angulartics": "1.1.0",
-    "videogular-controls": "1.1.0",
-    "videogular-themes-default": "1.1.0",
+    "videogular": "~1.3.2",
+    "videogular-angulartics": "~1.3.2",
+    "videogular-controls": "~1.3.2",
+    "videogular-themes-default": "~1.3.2",
     "videogular-youtube": "master",
     "angular-toastr": "~1.5.0",
     "angular-animate": "~1.4.7"
