--- a/public/videogular-angulartics/bower.json
+++ b/public/videogular-angulartics/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "videogular-angulartics",
-  "version": "1.1.0",
+  "version": "1.3.2",
   "main": "./vg-analytics.js",
   "dependencies": {
-    "videogular": "1.1.0",
-    "angulartics": "0.17.2"
+    "videogular": "~1.3.1",
+    "angulartics": "~0.17.2"
   }
 }
