--- a/public/videogular-angulartics/package.json
+++ b/public/videogular-angulartics/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "videogular",
-	"version": "0.3.0",
-	"dependencies": {},
+	"name": "videogula-angulartics",
+	"version": "1.3.2",
+	"main": "index.js",
 	"devDependencies": {
 		"grunt": "~0.4.1",
 		"grunt-release": "~0.7.0"
