--- a/public/videogular-controls/bower.json
+++ b/public/videogular-controls/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "videogular-controls",
-  "version": "1.1.0",
+  "version": "1.3.2",
   "main": "./vg-controls.js",
   "dependencies": {
-    "videogular": "1.1.0"
+    "videogular": "~1.3.2"
   }
 }
