--- a/public/videogular-controls/package.json
+++ b/public/videogular-controls/package.json
@@ -1,15 +1,12 @@
 {
-	"name": "videogular",
-	"version": "0.3.0",
-	"dependencies": {},
+	"name": "videogular-controls",
+	"version": "1.3.2",
+	"main": "index.js",
 	"devDependencies": {
 		"grunt": "~0.4.1",
 		"grunt-release": "~0.7.0"
 	},
 	"engines": {
 		"node": ">=0.8.0"
-	},
-	"scripts": {
-		"test": "grunt test"
 	}
 }
