--- a/public/videogular-overlay-play/bower.json
+++ b/public/videogular-overlay-play/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "videogular-overlay-play",
-  "version": "1.2.6",
+  "version": "1.2.8",
   "main": "./vg-overlay-play.js",
   "dependencies": {
-    "videogular": "1.2.6"
+    "videogular": "^1.2.8"
   }
 }
