--- a/public/videogular-themes-default/bower.json
+++ b/public/videogular-themes-default/bower.json
@@ -1,8 +1,11 @@
 {
   "name": "videogular-themes-default",
-  "version": "1.1.0",
-  "main": "./videogular.css",
+  "version": "1.3.2",
+  "main": [
+    "./videogular.css",
+    "./fonts/*"
+  ],
   "dependencies": {
-    "videogular": "1.1.0"
+    "videogular": "~1.3.2"
   }
 }
