--- a/public/videogular/bower.json
+++ b/public/videogular/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "videogular",
-  "version": "1.2.6",
+  "version": "1.3.2",
   "main": "./videogular.js",
   "dependencies": {
-    "angular": "~1.3.x",
-    "angular-sanitize": "~1.3.x"
+    "angular": "^1.3.x",
+    "angular-sanitize": "^1.3.x"
   }
 }
