--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.10.4",
     "flash": "^1.1.0",
     "fs-extra": "^0.24.0",
+    "gravatar": "^1.3.1",
     "gulp": "^3.9.0",
     "lodash": "^3.10.0",
     "moment": "^2.10.2",
