--- a/modules/tabs/newsfeed-update/config.json
+++ b/modules/tabs/newsfeed-update/config.json
@@ -1,4 +1,5 @@
 {
+  "orderNo": 5,
   "displayName": "Course Newsfeed Update",
   "location": "course",
   "description": "to show updates on every actions on this course",
