can display dynamic tab list in course config

--- a/modules/tabs/newsfeed-update/config.json
+++ b/modules/tabs/newsfeed-update/config.json
@@ -1,6 +1,6 @@
 {
   "orderNo": 5,
-  "displayName": "Course Newsfeed Update",
+  "displayName": "Newsfeed",
   "location": "course",
   "description": "to show updates on every actions on this course",
   "isDefaultActivated": true,
