--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "grunt": "^0.4.5",
     "grunt-bowercopy": "^1.2.0",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-ng-annotate": "^1.0.1",
