--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-uuid": "^1.4.3",
     "passport": "^0.3.0",
     "passport-facebook": "^2.0.0",
+    "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0",
     "shortid": "^2.2.2",
