starting to do oauth2

--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "mongoose": "^4.0.7",
     "morgan": "~1.6.1",
     "node-uuid": "^1.4.3",
+    "oauth2orize": "^1.2.0",
     "passport": "^0.3.0",
     "passport-facebook": "^2.0.0",
     "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0",
     "shortid": "^2.2.2",
