can save html widget

--- a/modules/applications/ui-widgets/config.json
+++ b/modules/applications/ui-widgets/config.json
@@ -13,7 +13,7 @@
       "hasConfigButton": true,
       "height": 1,
       "icon": "/img/appPlaceholder.png",
-      "controller": "HtmlSidebarController"
+      "controller": "HtmlSidebarToolController"
     }
   ]
 }
