--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^4.0.7",
     "morgan": "~1.6.1",
     "node-uuid": "^1.4.3",
+    "nodemailer": "^2.0.0",
     "oauth2orize": "^1.2.0",
     "passport": "^0.3.0",
     "passport-custom": "^1.0.5",
