--- a/modules/applications/course-analytics/config.json
+++ b/modules/applications/course-analytics/config.json
@@ -70,6 +70,16 @@
       "width": 4,
       "height":1,
       "icon":"/img/appPlaceholder.png"
+    },
+    {
+      "name": "Activity History",
+      "location": "course-analytics",
+      "description": "Analytics bar graph to show history activity in this particular course",
+      "entryPoint": "/course-analytics/ca-history-analytics",
+      "widgetJavascript": ["ca-history-analytics.js"],
+      "width": 6,
+      "height":1,
+      "icon":"/img/appPlaceholder.png"
     }
   ]
 }
