--- a/bower.json
+++ b/bower.json
@@ -49,7 +49,8 @@
     "font-awesome": "fontawesome#^4.5.0",
     "Ionicons": "ionicons#^2.0.1",
     "datatables": "DataTables#^1.10.11",
-    "ng-tags-input": "^3.0.0"
+    "ng-tags-input": "^3.0.0",
+    "gridstack": "^0.2.5"
   },
   "devDependencies": {
     "livereload-js": "^2.2.1"
